# digybot-llm-router-trainer

./: .pylintrc  README.md  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: QA.yml  pylint.yml
configs/: train.yaml
src/llama_finetune/: config.py  data_utils.py  model_utils.py  train.py
tests/: conftest.py  test_config.py  test_data_utils.py  test_train_integration.py
tests/assets/: tiny_config.yaml  tiny_dataset.json
